--- a/langgraph/langraph_AgenticWorkflow_RAG_WebCrawler_Verifier_Agents.ipynb
+++ b/langgraph/langraph_AgenticWorkflow_RAG_WebCrawler_Verifier_Agents.ipynb
@@ -32,7 +32,7 @@
    "id": "b615aa81",
    "metadata": {},
    "source": [
-    "### Config the model"
+    "### Config the model from Google"
    ]
   },
   {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ee2346d5",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4c39b585",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "87676a6a",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "bd9a414c",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        " 'to dominate the global economy well into the future.']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,10 +247,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f1361078",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(doc_string)"
    ]
@@ -267,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "b3aa918e",
    "metadata": {},
    "outputs": [],
@@ -277,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "5b33c43c",
    "metadata": {},
    "outputs": [
@@ -289,7 +300,7 @@
        " Document(metadata={'source': '..\\\\data2\\\\usa.txt'}, page_content='Final Summary The U.S. economy remains the engine of global growth, backed by unmatched innovation, financial dominance, and a strong institutional framework. Its $28 trillion GDP and influence over')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "8e2586ab",
    "metadata": {},
    "outputs": [],
@@ -320,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "8a44b1b4",
    "metadata": {},
    "outputs": [],
@@ -330,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "ce8e5c86",
    "metadata": {},
    "outputs": [],
@@ -340,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "42206129",
    "metadata": {},
    "outputs": [
@@ -350,7 +361,7 @@
        "'The output should be formatted as a JSON instance that conforms to the JSON schema below.\\n\\nAs an example, for the schema {\"properties\": {\"foo\": {\"title\": \"Foo\", \"description\": \"a list of strings\", \"type\": \"array\", \"items\": {\"type\": \"string\"}}}, \"required\": [\"foo\"]}\\nthe object {\"foo\": [\"bar\", \"baz\"]} is a well-formatted instance of the schema. The object {\"properties\": {\"foo\": [\"bar\", \"baz\"]}} is not well-formatted.\\n\\nHere is the output schema:\\n```\\n{\"properties\": {\"Topic\": {\"description\": \"selected topic\", \"title\": \"Topic\", \"type\": \"string\"}, \"Reasoning\": {\"description\": \"Reasoning behind topic selection\", \"title\": \"Reasoning\", \"type\": \"string\"}}, \"required\": [\"Topic\", \"Reasoning\"]}\\n```'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "9e00d6f7",
    "metadata": {},
    "outputs": [],
@@ -389,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "4c1fd4ff",
    "metadata": {},
    "outputs": [],
@@ -399,17 +410,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "a44de538",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'messages': []}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Agentstate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "8de1c965",
    "metadata": {},
    "outputs": [],
@@ -419,17 +441,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "8353b951",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'messages': ['hi how are you?']}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Agentstate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "5d5b1df8",
    "metadata": {},
    "outputs": [],
@@ -439,17 +472,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "a6388120",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'messages': ['hi how are you?', 'what are you doing?']}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Agentstate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "57764eec",
    "metadata": {},
    "outputs": [],
@@ -459,30 +503,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "8f423d9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'messages': ['hi how are you?',\n",
+       "  'what are you doing?',\n",
+       "  'i hope everything fine']}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Agentstate\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "6827c465",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'i hope everything fine'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Agentstate[\"messages\"][-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "90c1b4c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hi how are you?'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Agentstate[\"messages\"][0]"
    ]
@@ -497,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "id": "4b50c28f",
    "metadata": {},
    "outputs": [],
@@ -508,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "id": "42643fbb",
    "metadata": {},
    "outputs": [],
@@ -518,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "e00770cd",
    "metadata": {},
    "outputs": [],
@@ -528,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 48,
    "id": "88c27bb3",
    "metadata": {},
    "outputs": [],
@@ -542,6 +621,10 @@
     "    template=\"\"\"\n",
     "    Your task is to classify the given user query into one of the following categories: [USA,Web Search,Not Related]. \n",
     "    Only respond with the category name and nothing else.\n",
+    "    Before responding you will VERIFY the user query against the Verification Agent. In case the verification is false then you will again go back to the Superviros Agent and attempt to \n",
+    "    classify the query again.\n",
+    "    If the query is not related to the categories, respond with \"Not Related\". \n",
+    "    Ensure you only runt this not more than 2 times.\n",
     "\n",
     "    User query: {question}\n",
     "    {format_instructions}\n",
@@ -565,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 49,
    "id": "613e3a10",
    "metadata": {},
    "outputs": [],
@@ -585,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 50,
    "id": "a730b278",
    "metadata": {},
    "outputs": [
@@ -594,7 +677,7 @@
      "output_type": "stream",
      "text": [
       "Question what is a today weather?\n",
-      "Parsed response: Topic='Web Search' Reasoning='The query is a general question about the weather, typically answered through a web search engine.'\n"
+      "Parsed response: Topic='Web Search' Reasoning='The query is a general weather inquiry that can be answered through a web search engine.'\n"
      ]
     },
     {
@@ -603,7 +686,7 @@
        "{'messages': ['Web Search']}"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "id": "bfb736a8",
    "metadata": {},
    "outputs": [],
@@ -626,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "88f0a9e2",
    "metadata": {},
    "outputs": [],
@@ -648,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 43,
    "id": "4bd37c63",
    "metadata": {},
    "outputs": [],
@@ -658,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 44,
    "id": "a445964d",
    "metadata": {},
    "outputs": [
@@ -676,7 +759,7 @@
        "{'route': 'web'}"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 45,
    "id": "b66f1de5",
    "metadata": {},
    "outputs": [],
@@ -713,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "id": "188882bd",
    "metadata": {},
    "outputs": [],
@@ -743,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "23cbceb6",
    "metadata": {},
    "outputs": [],
@@ -754,7 +837,7 @@
     "    question = state[\"messages\"][0]\n",
     "    \n",
     "    # Normal LLM call\n",
-    "    complete_query = \"Anwer the follow question with you knowledge of the real world. Following is the user question: \" + question\n",
+    "    complete_query = \"Answer the follow question with you knowledge of the real world. Following is the user question: \" + question\n",
     "    response = model.invoke(complete_query)\n",
     "    return {\"messages\": [response.content]}"
    ]
