--- a/langgraph/langraph_AgenticWorkflow_4Agentflow_with_Verifier_Agents.ipynb
+++ b/langgraph/langraph_AgenticWorkflow_4Agentflow_with_Verifier_Agents.ipynb
@@ -623,86 +623,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "88c27bb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def function_1(state:AgentState):\n",
-    "    \n",
-    "    question=state[\"messages\"][-1]\n",
-    "    \n",
-    "    print(\"Question\",question)\n",
-    "    \n",
-    "    template=\"\"\"\n",
-    "    Your task is to classify the given user query into one of the following categories: [USA,Web Search,Not Related]. \n",
-    "    Only respond with the category name and nothing else.\n",
-    "    Before responding you will VERIFY the user query against the Verification Agent. In case the verification is false then you will again go back to the Superviros Agent and attempt to \n",
-    "    classify the query again.\n",
-    "    If the query is not related to the categories, respond with \"Not Related\". \n",
-    "    Ensure you only runt this not more than 2 times.\n",
-    "\n",
-    "    User query: {question}\n",
-    "    {format_instructions}\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    prompt= PromptTemplate(\n",
-    "        template=template,\n",
-    "        input_variable=[\"question\"],\n",
-    "        partial_variables={\"format_instructions\": parser.get_format_instructions()}\n",
-    "    )\n",
-    "    \n",
-    "    \n",
-    "    chain= prompt | model | parser\n",
-    "    \n",
-    "    response = chain.invoke({\"question\":question})\n",
-    "    \n",
-    "    print(\"Parsed response:\", response)\n",
-    "    \n",
-    "    return {\"messages\": [response.Topic]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "bd017ded",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def supervisor(state: AgentState) -> AgentState:\n",
-    "    \"\"\"\n",
-    "    Entry and control node for the LangGraph.\n",
-    "\n",
-    "    - On first pass: simply returns state to be routed normally.\n",
-    "    - On validation failure: decides what node to call next (sets 'supervisor_choice').\n",
-    "\n",
-    "    The 'supervisor_choice' is consumed by the router to direct control flow.\n",
-    "    \"\"\"\n",
-    "    if state.get(\"verification_passed\") is False:\n",
-    "        print(\"Supervisor: Previous output failed validation.\")\n",
-    "\n",
-    "        # Track what was last tried\n",
-    "        last = state.get(\"last_route\")\n",
-    "\n",
-    "        # Decide next route (rotate between llm, rag, web)\n",
-    "        fallback_order = [\"llm\", \"rag\", \"web\"]\n",
-    "        try:\n",
-    "            next_index = (fallback_order.index(last) + 1) % len(fallback_order)\n",
-    "        except (ValueError, TypeError):\n",
-    "            next_index = 0  # default to first if last_route is missing\n",
-    "\n",
-    "        next_route = fallback_order[next_index]\n",
-    "\n",
-    "        print(f\"Supervisor: Re-routing to {next_route}\")\n",
-    "        state[\"supervisor_choice\"] = next_route\n",
-    "\n",
-    "    else:\n",
-    "        # First-time call or passed validation\n",
-    "        print(\"Supervisor: Starting or validation passed, proceeding to router.\")\n",
-    "        state[\"supervisor_choice\"] = None  # clear any previous value\n",
-    "\n",
-    "    return state\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -806,6 +731,60 @@
    ],
    "source": [
     "router(state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "418391f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'AgentState' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34msupervisor\u001b[39m(state: \u001b[43mAgentState\u001b[49m) -> AgentState:\n\u001b[32m      2\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[33;03m    Entry and control node for the LangGraph.\u001b[39;00m\n\u001b[32m      4\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m      8\u001b[39m \u001b[33;03m    The 'supervisor_choice' is consumed by the router to direct control flow.\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m     10\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m state.get(\u001b[33m\"\u001b[39m\u001b[33mverification_passed\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m:\n",
+      "\u001b[31mNameError\u001b[39m: name 'AgentState' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def supervisor(state: AgentState) -> AgentState:\n",
+    "    \"\"\"\n",
+    "    Entry and control node for the LangGraph.\n",
+    "\n",
+    "    - On first pass: simply returns state to be routed normally.\n",
+    "    - On validation failure: decides what node to call next (sets 'supervisor_choice').\n",
+    "\n",
+    "    The 'supervisor_choice' is consumed by the router to direct control flow.\n",
+    "    \"\"\"\n",
+    "    if state.get(\"verification_passed\") is False:\n",
+    "        print(\"Supervisor: Previous output failed validation.\")\n",
+    "\n",
+    "        # Track what was last tried\n",
+    "        last = state.get(\"last_route\")\n",
+    "\n",
+    "        # Decide next route (rotate between llm, rag, web)\n",
+    "        fallback_order = [\"llm\", \"rag\", \"web\"]\n",
+    "        try:\n",
+    "            next_index = (fallback_order.index(last) + 1) % len(fallback_order)\n",
+    "        except (ValueError, TypeError):\n",
+    "            next_index = 0  # default to first if last_route is missing\n",
+    "\n",
+    "        next_route = fallback_order[next_index]\n",
+    "\n",
+    "        print(f\"Supervisor: Re-routing to {next_route}\")\n",
+    "        state[\"supervisor_choice\"] = next_route\n",
+    "\n",
+    "    else:\n",
+    "        # First-time call or passed validation\n",
+    "        print(\"Supervisor: Starting or validation passed, proceeding to router.\")\n",
+    "        state[\"supervisor_choice\"] = None  # clear any previous value\n",
+    "\n",
+    "    return state\n"
    ]
   },
   {
