--- a/langgraph/langgraph_class_3.ipynb
+++ b/langgraph/langgraph_class_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 200,
    "id": "d39ce701",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 201,
    "id": "e8992eee",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 202,
    "id": "6a4b2a73",
    "metadata": {},
    "outputs": [],
@@ -51,12 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "280b33a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_groq import ChatGroq\n"
+    "model=\"deepseek-r1-distill-llama-70b\"\n",
+    "from langchain_groq import ChatGroq\n",
+    "llm=ChatGroq(model_name=model)\n",
+    "llm.invoke(\"hi\")"
    ]
   },
   {
@@ -202,13 +205,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from langchain_core.messages import AnyMessage\n",
-    "# # class MessagesState(TypedDict):\n",
-    "# #     messages: Annotated[list[AnyMessage], add_messages]\n",
+    "from langchain_core.messages import AnyMessage\n",
+    "class MessagesState(TypedDict):\n",
+    "    messages: Annotated[list[AnyMessage], add_messages]\n",
     "\n",
     "\n",
-    "# class AgentState(TypedDict):\n",
-    "#     messages: Annotated[Sequence[BaseMessage], operator.add]"
+    "class AgentState(TypedDict):\n",
+    "    messages: Annotated[Sequence[BaseMessage], operator.add]"
    ]
   },
   {
