--- a/langgraph/langgraph_class_6_multiagent.ipynb
+++ b/langgraph/langgraph_class_6_multiagent.ipynb
@@ -858,8 +858,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "63eaa635",
+   "metadata": {},
+   "source": [
+    "result=[humanmesssage\n",
+    "aimessgae\n",
+    "toolmessage\n",
+    "aimessage\n",
+    "toolmessage\n",
+    "aimessage]"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "id": "63b1c75b",
    "metadata": {},
    "outputs": [],
@@ -874,10 +887,40 @@
     "    ), \n",
     "        )\n",
     "    \n",
+    "    \n",
+    "    \n",
     "    result=research_agent.invoke(state)\n",
+    "    \n",
+    "    result=[messages:{humanmesssage\n",
+    "                    aimessgae\n",
+    "                    toolmessage\n",
+    "                    aimessage\n",
+    "                    toolmessage\n",
+    "                    aimessage}]\n",
+    "    \n",
     "    goto=get_next_node(result[\"messages\"][-1],\"chart_generator\")\n",
+    "    \n",
     "    result[\"messages\"][-1] = HumanMessage(content=result[\"messages\"][-1].content, name=\"researcher\")\n",
+    "    \n",
     "    return Command(update={\"messages\": result[\"messages\"]},goto=goto)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f9d7a98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent1(human1)-->agent2(human2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fde9130",
+   "metadata": {},
+   "source": [
+    "AIMessage(content=\"Here are the UK GDP figures for the past three years:\\n\\n- **2021**: $3,141.51 billion\\n- **2022**: $3,088.84 billion\\n- **2023**: $3,340.03 billion\\n\\nLet's create a line chart with this data. I'll pass these figures to my colleague to make the chart.\", additional_kwargs={'tool_calls': [{'id': 'call_jFcUWkL9Zq54uWKBe5rMC9Yh', 'function': {'arguments': '{\"query\":\"UK GDP 2023 2022 2021 line chart\"}', 'name': 'tavily_search_results_json'}, 'type': 'function'}], 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 106, 'prompt_tokens': 9945, 'total_tokens': 10051, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 7936}}, 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_07871e2ad8', 'id': 'chatcmpl-Bl84FVwNUMyu4khQNXpftP508oUlR', 'service_tier': 'default', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run--d068c020-31cb-463f-878a-9a83f88bf9d5-0', tool_calls=[{'name': 'tavily_search_results_json', 'args': {'query': 'UK GDP 2023 2022 2021 line chart'}, 'id': 'call_jFcUWkL9Zq54uWKBe5rMC9Yh', 'type': 'tool_call'}], usage_metadata={'input_tokens': 9945, 'output_tokens': 106, 'total_tokens': 10051, 'input_token_details': {'audio': 0, 'cache_read': 7936}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
    ]
   },
   {
@@ -1036,7 +1079,81 @@
    "id": "f86f7531",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "retriver_tool=documents\n",
+    "\n",
+    "def fun(document):\n",
+    "    calcualtion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea274452",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm_with_bind_tool=llm.bind_tools(fun)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2fa2b33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm_with_bind_tool.invoke(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88b61ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tool_calls\n",
+    "\n",
+    "{\n",
+    "    tool_name(function name)\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3176b0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict={\n",
+    "   funcation_name: fun\n",
+    "   function_name2: fun2\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d69130ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "func=dict[tool_calls.tool_name]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "967e6cc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "func(docu)"
+   ]
   }
  ],
  "metadata": {
