--- a/langgraph/tools.ipynb
+++ b/langgraph/tools.ipynb
@@ -290,6 +290,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from langchain_community.tools.tavily_search import TavilySearchResults\n",
+    "TAVILY_API_KEY=os.getenv(\"TAVILY_API_KEY\")\n",
     "tool=TavilySearchResults(tavily_api_key=TAVILY_API_KEY)"
    ]
   },
@@ -709,6 +712,89 @@
     "def call_gamil_api(args):\n",
     "    \"\"\"this is my gamil api calling funtion\"\"\"\n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "f9a65aaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'JsonOutputParser' from 'langchain.output_parsers' (c:\\Complete_Content2\\Agentic-2.0\\env\\lib\\site-packages\\langchain\\output_parsers\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[48], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#from langchain_groq import ChatGroq\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mprompts\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ChatPromptTemplate\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlangchain\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moutput_parsers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m JsonOutputParser\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpydantic\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m BaseModel, Field\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'JsonOutputParser' from 'langchain.output_parsers' (c:\\Complete_Content2\\Agentic-2.0\\env\\lib\\site-packages\\langchain\\output_parsers\\__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "#from langchain_groq import ChatGroq\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain.output_parsers import JsonOutputParser\n",
+    "from pydantic import BaseModel, Field"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "63aefa1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'BaseModel' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[47], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Define your desired data structure.\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mProduct\u001b[39;00m(\u001b[43mBaseModel\u001b[49m):\n\u001b[0;32m      3\u001b[0m     Name: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m Field(description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mName of the product\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m     Details: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m Field(description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDetails about the product\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'BaseModel' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Define your desired data structure.\n",
+    "class Product(BaseModel):\n",
+    "    Name: str = Field(description=\"Name of the product\")\n",
+    "    Details: str = Field(description=\"Details about the product\")\n",
+    "    Price: int = Field(description=\"Price in USD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42ec7cfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Create the output parser\n",
+    "parser = JsonOutputParser(pydantic_object=Product)\n",
+    "\n",
+    "# Define the model\n",
+    "model = ChatGroq(model=\"gemma2-9b-it\")  # Assuming this is a valid model in your environment\n",
+    "\n",
+    "# Define the prompt using proper template formatting\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"Provide the product details in JSON format.\\n{format_instructions}\"),\n",
+    "    (\"user\", \"{input}\")\n",
+    "]).partial(format_instructions=parser.get_format_instructions())\n",
+    "\n",
+    "# Create the chain\n",
+    "chain = prompt | model | parser\n",
+    "\n",
+    "# User query\n",
+    "query = \"Tell me about iPhone 15\"\n",
+    "\n",
+    "# Run the chain\n",
+    "response = chain.invoke({\"input\": query})\n",
+    "print(response)\n"
    ]
   }
  ],
